# glfield

./: .gitignore  CMakeLists.txt  README.md  project_start  project_start.py  vcpkg.json
CommonCode/: dependencies.txt
CommonCode/include/: camera.h  gameconf.h  getrand.h  glcore.hpp  myassert.h  onepress.h  resource.h  screen.hpp  singleton.h  sound.h  types.hpp
CommonCode/src/: camera.cpp  gameconf.cpp  getrand.cpp  onepress.cpp  resource.cpp  screen.cpp  sound.cpp
docs/: unix-compilation.md  windows-compilation.md
linux/: README.md  game.conf  glfield
os-deps/: apt-pkges.sh  brew-pkges.sh  dnf-pkges.sh  pacman-pkges.sh  vcpkg-from-source.sh  windows-links.md  winget-pkges.bat
src/: main.cpp
src/game/: animation.cpp  animation.h  cell.h  counter.cpp  counter.h  cubetree.cpp  cubetree.h  cursor.cpp  cursor.h  drawmenu.cpp  drawmenu.h  effect.cpp  effect.h  hud.cpp  hud.h  map.cpp  map.h  object.cpp  object.h  pickedslot.cpp  pickedslot.h  pixel.h  player.cpp  player.h  program.cpp  program.h  program.hpp  select.cpp  select.h  sky.cpp  sky.h  sounds.cpp  sounds.h  texture.cpp  texture.h  vector.cpp  vector.h
src/objects/: cubetree.cpp  cubetree.h  hud.cpp  hud.h  map.cpp  map.h  menucraft.cpp  menucraft.h  object.cpp  object.h  player.cpp  player.h  sky.cpp  sky.h
src/resources/: sounds.h  texture.cpp  texture.h
win32/: game.conf
windows/: README.md
